# peridotml-env

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  env.yaml  pyproject.toml
configs/: p10k.zsh
src/flyte_repo/: main.py  tlm_example.py
src/methanesat/: demos.py  renderers.py
src/tlm_demo/: sales.py
