[project]
name = "methanestat"
version = "0.0.1"
dependencies = [
    "awscli",
    "flytekit",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "mypy",
    "pytest",
    "isort",
    "flake8"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)